[tool.poetry]
name = "Text-game"
version = "0.2.0"
description = "A small Text based game that I am working on."
authors = ["Me, myself and I"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
