[tool.poetry]
name = "Text-Adventure"
version = "v0.1.0-alpha.2"
description = "A small Text based game that I am working on."
authors = ["Dragorn06"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.0"
cx-freeze = "^6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
